cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
project(img2bbs CXX)
find_package(OpenCV REQUIRED)
find_package(Freetype REQUIRED)
set(CMAKE_BUILD_TYPE Release)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -flto")
set(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -flto")
add_subdirectory(src)
